# ising-verifier-final

./: .gitignore  Cargo.toml  README.md
dashboard/: package.json
dashboard/app/: layout.tsx  page.tsx
dashboard/components/: JobList.tsx  Leaderboard.tsx  PostJobForm.tsx
dashboard/pages/api/: jobs.ts  leaderboard.ts
integration-test/: Cargo.toml
integration-test/src/: main.rs
l1-contracts/: .env.example  DEPLOY.md  README.md  foundry.toml
l1-contracts/broadcast/Deploy.s.sol/11155111/: run-1764032545687.json  run-1764032715947.json  run-1764033244156.json  run-1764067254716.json  run-1764067893302.json  run-1764067979824.json
l1-contracts/cache/: solidity-files-cache.json
l1-contracts/cache/Deploy.s.sol/11155111/: run-1764067893302.json
l1-contracts/script/: Deploy.s.sol  interact.sh
l1-contracts/src/: IsingJobManager.sol  NovaVerifier.sol
l1-contracts/test/: IsingJobManager.t.sol  NovaVerifier.t.sol
nexus-chain/: DUAL_APPROVAL.md  go.mod  go.sum
nexus-chain/app/: app.go  encoding.go
nexus-chain/cmd/nexusd/: main.go
nexus-chain/cmd/nexusd/cmd/: checkpoint.go  init.go  miner.go  query.go  root.go  start.go  tx.go
nexus-chain/x/dualapproval/keeper/: keeper.go
nexus-chain/x/dualapproval/types/: msgs.go  types.go
nexus-miner/: .gitignore  Cargo.toml  README.md  config.toml
nexus-miner/data/: covid_screen_results.json  priority_targets.json  test_ligand.pdbqt
nexus-miner/docs/: WASM_DETERMINISM.md
nexus-miner/output/visualizations/: report.html
nexus-miner/output/visualizations/3d/: famotidine_3d.html
nexus-miner/scripts/: covid_screen.py  deterministic_admet.py  download-wasm.sh  download_target.py  nexus_result.py  visualize_3d.py  visualize_results.py
nexus-miner/src/: chain.rs  client.rs  config.rs  hasher.rs  ipfs.rs  main.rs  worker.rs
nexus-miner/tests/: Cargo.toml  integration_test.rs  verification_test.rs  wasm_test.rs
nexus-miner/x/dualapproval/keeper/: keeper.go
nexus-miner/x/dualapproval/types/: msgs.go  types.go
nexus-mining/: README.md  go.mod
nexus-mining/proto/: buf.gen.yaml  buf.yaml
nexus-mining/proto/nexus/mining/v1/: genesis.proto  (+3 more)
nexus-mining/x/mining/keeper/: genesis.go  keeper.go  msg_server.go  query_server.go
nexus-mining/x/mining/types/: errors.go  genesis.go  types.go
nova-prover/: Cargo.toml  README.md
nova-prover/src/: collaborative.rs  comparators.rs  gpu_test.rs  l1_export.rs  lib.rs  main.rs  stark_export.rs
nova-prover/src/chips/: mod.rs
orchestration/: Cargo.toml  README.md
orchestration/src/: api.rs  job_index.rs  main.rs  matcher.rs  puub.rs  types.rs  verify.rs
prover-client/: CLOUD_MINING.md  Cargo.toml  README.md  ising-prover.service
prover-client/src/: main.rs
src/: lib.rs  main.rs  merkle.rs  prover.rs  real_proof.rs
src/chips/: mod.rs
stark-wrapper/: README.md
stark-wrapper/contracts/: ISP1Verifier.sol  SP1NovaVerifier.sol
stark-wrapper/host/: Cargo.toml
stark-wrapper/host/src/: main.rs
stark-wrapper/program/: Cargo.toml
stark-wrapper/program/src/: main.rs
tests/: Lt64tests  encrypt_spins.rs  integration.rs  lt16.rs  lt8.rs  poseidon.rs  smoke.rs
