[package]
name = "nexus-miner"
version = "0.1.0"
edition = "2021"
description = "NEXUS molecular docking miner"
license = "Apache-2.0"

[dependencies]
wasmtime = "19"
wasmtime-wasi = "19"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
base64 = "0.21"

[dev-dependencies]
tempfile = "3"
md5 = "0.7"
