[package]
name = "ising-nova"
version = "0.1.0"
edition = "2021"
description = "Nova-based ZK prover for Ising optimization problems"

[dependencies]
nova-snark = "0.34"
ff = "0.13"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rand = "0.8"
bellpepper-core = "0.4.0"
bellpepper = "0.4.1"

[profile.release]
opt-level = 3
lto = true
