[package]
name = "ising-prover-client"
version = "0.1.0"
edition = "2021"

[dependencies]
ising-nova = { path = "../nova-prover" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
ethers = "2.0"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
